# image-manager

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.devops/docker/api/dev/: Dockerfile
.devops/terraform/: .terraform.lock.hcl  apis.tf  artifact_registry.tf  buckets.tf  database.tf  main.tf  run.tf  service_accounts.tf  variables.tf
.github/workflows/: deploy.yml  lint_and_test.yml  pylint.yml
apps/image_api/src/: env.py  logger.py  main.py
apps/image_api/src/api/: exceptions.py  rate_limiter.py
apps/image_api/src/api/auth/: require_self.py
apps/image_api/src/clients/: cloud_storage.py
apps/image_api/src/database/: client.py
apps/image_api/src/entities/: api_key.py  image.py
apps/image_api/src/service/: image.py  team.py  user.py
apps/image_api/tests/: conftest.py
apps/image_api/tests/e2e/: test_image.py  test_user.py
apps/image_processor/: README.md
src/: logger.py  main.py
src/api/: exceptions.py  register_routes.py
src/api/auth/: require_admin.py  require_api_key.py  require_team.py
src/api/middleware/: request_id.py
src/api/routes/: image.py  team.py  users.py
src/api/schemas/: user.py
src/database/: client.py
src/database/migrations/: env.py
src/database/models/: api_key.py  team.py  user.py
src/database/repositories/: api_key_repository.py  image_repository.py  team_repository.py  user_repository.py
src/entities/: api_key.py  team.py  user.py
src/service/: api_key.py  image.py  team.py  user.py
tests/: conftest.py
tests/e2e/: test_auth.py  test_image.py  test_team.py  test_user.py
(+18 files in other folders)
